soluciones/laravel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: laravel
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 8000
  type: NodePort
