soluciones/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: laravel
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
