soluciones/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: laravel
  labels:
    app: phpmyadmin
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
  selector:
    app: phpmyadmin
